tests/miniJava/neg/006596_mutation.MiniJava
class java { public static void Main ( String new ] java ) { { } } }
